--- a/src/index.scss
+++ b/src/index.scss
@@ -20,9 +20,9 @@ html {
 }
 
 body {
-  overflow-x: hidden;
-  margin: 0 0 4em 0;
-  padding: 0 1vw;
+  // overflow-x: hidden;
+  margin: 0 0 4rem 0;
+  padding: 0 1rem;
 }
 
 * {
